2000-06-27  Ettore Perazzoli  <ettore@helixcode.com>

	* filter-xml.c (load_desc): Strdup content before assigning the
	value.  Also, no need to check for NULL when g_strdup()ing as
	g_strdup() returns NULL for a NULL arg.

2000-06-27  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (INCLUDES): `-I$(top_builddir)/shell' so that it
	works with builddir != srcdir.  [We need to #include
	"Evolution.h".]

2000-06-27  Michael Zucchi  <zucchi@zedzone.mmc.com.au>

	* Makefile.am (INCLUDES): Add the shell dir for includes (for
	corba interfaces).

	* filter-arg-types.c (impl_FolderSelectionListener_selected):
	Listener for folder query.  Sigh.
	(create_listener): Create the listener object for the folder
	dialogue query.  Uses a global for linkage to the shell object,
	via the mail component.
	(arg_folder_edit_value): Call the folder selection dialogue to
	edit the value, rather than a simple text widget.

2000-06-26  Jeffrey Stedfast  <fejj@helixcode.com>

	* filter-editor.c: Added a #include <gnome-xml/parser.h> as this
	was needed (since we used the xml parser...)
	(druid_dialogue_clicked): Do we want to use struct filter_option
	or do we instead want to use struct filter_optionrule as we had before?
	Since the function we pass the data to expects filter_option, I suspect 
	that that is what we want.

	* filter-format.h (filter_description_html_write): Renamed from
	description_html_write in order to match function name in
	filter-format.c

	* filter-druid.c (option_name_changed): Fixed a memory leak (Free'd
	a filter description list).

	* filter-arg-types.c (arg_folder_edit_values): Free'd GList data in
	argin->values.

	* filter-driver.c (filter_driver_set_rules): Added code to free an
	xmlDoc and some other data.

	* filter-arg.h: Add prototypes for filter_arg_write_html() and 
	filter_arg_write_text();

	* filter-arg-types.c: Lets see if we can't get rid of some of these 
	warnings... (use some casts to make warnings go away)